vault/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-ip-whitelist@kubernetescrd
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    argocd.argoproj.io/ignore-healthcheck: "true"
spec:
  tls:
    - hosts:
        - vault.local.traunseenet.com
      secretName: letsencrypt-prod
  rules:
    - host: vault.local.traunseenet.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault
                port:
                  number: 8200
